Mis dos paginas web

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="enlaces" id="enlaces">
                     <a href="#" id="enlace-inicio" class="btn-header">Inicio</a>
-                    <a href="#" id="enlace-equipo" class="btn-header">Equipo</a>
+                    <a href="" id="enlace-equipo" class="btn-header">Equipo</a>
                     <a href="#" id="enlace-servicio" class="btn-header">Servicios</a>
                     <a href="#" id="enlace-trabajo" class="btn-header">Trabajos</a>
                     <a href="#" id="enlace-contacto" class="btn-header">Contacto</a>
@@ -49,7 +49,9 @@
                     </div>
                     <div class="texto-team">
                         <h4>Carla</h4>
-                        <p>Ingeniera de Sistemas.</p>
+                        <p><a href="index1.html">Ingeniera de Sistemas.</a>
+                            
+                        </p>
                     </div>
                 </div>
                 <div class="content-card">
@@ -197,6 +199,8 @@
                 <i class="fab fa-github">
                     <p>Sheynner</p>
                 </i>
+                <i>       </i>
+                
             </div>
         </div>
 
