--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
         </div>
 <nav class="navbar">
     <a href="#">Inicio</a>
-    <a href="#">Nosotros</a>
+    <a href="index.html">Nosotros</a>
     <a href="#">Contacto</a>
     <a href="#">Noticias mas recientes</a>
     <a href="#">Encuentranos</a>
